include_directories(./ ../)

add_library(s_widgets
    lineedit.cpp
    lineedit.h
    messagebox.cpp
    messagebox.h
    nframecontainer.cpp
    nframecontainer.h
    nframe.cpp
    nframe.h
    ngridcontainer.cpp
    ngridcontainer.h
    ngrid.cpp
    ngrid.h
    nowheelcombobox.cpp
    nowheelcombobox.h
    sidebutton.cpp
    sidebutton.h
    statusbutton.cpp
    statusbutton.h
    statusbuttonwidget.cpp
    statusbuttonwidget.h
    systemtray.cpp
    systemtray.h
    temporarydir.cpp
    temporarydir.h)
